update to java 25 and create a new builder